# claude-code-proxy

./: .env.example  .python-lint  CLAUDE.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  start_proxy.py  test_cancellation.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.sisyphus/evidence/: task-1-empty-input.txt  task-1-image-skip.txt  task-1-system-tools.txt  task-1-text-estimation.txt  task-2-all-defaults.txt  task-2-known-model.txt  task-2-unknown-model.txt  task-3-defaults.txt  task-3-env-override.txt  task-4-404-fallback.txt  task-4-malformed-json.txt  task-4-null-fields.txt  task-4-valid-discovery.txt  task-5-env-override.txt  task-5-fallthrough.txt  task-6-all.txt  task-6-disabled.txt  task-6-full-suite.txt  task-6-oversized-reject.txt  task-6-underlimit-pass.txt  task-6-unknown-model.txt  task-7-all.txt  task-8-full-suite.txt  task-9-env-example.txt
docs/: architecture.md  architecture.mdx  configuration.md  configuration.mdx  getting-started.md  getting-started.mdx  index.md  index.mdx  troubleshooting.md  troubleshooting.mdx
docs/deployment/: binary.md  binary.mdx  index.md  index.mdx
docs/specifications/: index.md  index.mdx  web-search-tool.md
src/: dependencies.py  main.py  middleware.py
src/api/: endpoints.py
src/conversion/: __init__.py  request_converter.py  response_converter.py  responses_converter.py
src/core/: __init__.py  client.py  config.py  constants.py  logging.py  model_manager.py  model_registry.py  tokens.py
tests/: __init__.py  conftest.py  test_cancellation.py  test_client.py  test_config.py  test_context_window_validation.py  test_empty_content_sanitization.py  test_logging.py  test_main.py  test_model_manager.py  test_model_registry.py  test_models_enrichment.py  test_parse_tool_result.py  test_preflight_validation.py  test_request_converter.py  test_responses_converter.py  test_search_base.py  test_search_registry.py  test_search_tavily.py  test_searxng.py  test_tokens.py  test_tool_results.py  test_web_search_spec.py
(+8 files in other folders)
