[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-proxy"
version = "1.0.0"
description = "Proxy server enabling Claude Code to work with OpenAI-compatible API providers"
readme = "README.md"
authors = [
    {name = "Claude Code Proxy", email = "noreply@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn>=0.34.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "openai>=1.54.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "python-json-logger>=3.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/holegots/claude-code-proxy"
Repository = "https://github.com/holegots/claude-code-proxy.git"
Issues = "https://github.com/holegots/claude-code-proxy/issues"

[project.scripts]
claude-code-proxy = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "pyinstaller>=6.15.0",
    "ruff==0.15.0",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88
known_third_party = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: tests requiring a running proxy server at localhost:8082",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
ignore = ["I"]

[tool.pylint."messages_control"]
disable = ["E0401", "E1101", "W1203"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
